--- a/website.html
+++ b/website.html
@@ -22,8 +22,8 @@
     </div>
     
     <div class="text">
-       <div style="font-size:4vw;" class="sample"> Create Amazing Website </div>
-       <div style="font-size:3vw;">Pure HTML & CSS Only</div> 
+       <div  id="sample"> Create Amazing Website </div>
+       <div style="font-size:3vw;" id="sample2">Pure HTML & CSS Only</div> 
     </div>
 
     <div class="switch">
